--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,9 @@ copyright: bolyche
 intro: true         # Tip: Remove the span from site_heading if intro is set to true
 # This will be displayed in your intro
 short_bio: |
-    <p>Welcome to SciElve!</p>
-    <br>
-    <p> misc things of a scientist / writer / foibler hound </p>
-permalink: /:title.html
+  <p>Random fact: Head Cheese (aka Head Loaf) is made by stewing an entire Pigs Head. But ...no brain? ...On we go then!</p>
+  <p> - - Links above, Science below - - </p>
+permalink: /:title
 
 # Comments are powered by disqus
 comments: true
