--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # User Settings | Edit there as per required
 
-title: Sci Migrants
+title: Migrants (a misnomer)
 url: "https://bolyche.github.io"
 baseurl: ""
 
 # This will show up at the top of index page
 site_heading: >
-    Sci Migrants
+    Migrants (a misnomer)
 
 email: bolyche@protonmail.com
 author: bolyche
 # This description will show up in google search results
 # (for index page) etc.
 description: >
-    Personal site of @bolyche: sciencey & misc
+    Personal site of @bolyche: science & misc
 
 # This will what will show against &copy; in the footer
 copyright: bolyche
@@ -22,8 +22,7 @@ copyright: bolyche
 intro: true         # Tip: Remove the span from site_heading if intro is set to true
 # This will be displayed in your intro
 short_bio: |
-  <p>Random fact: Head Cheese (aka Head Loaf) is made by stewing an entire Pigs Head. But ...No brain? ...On we go then!</p>
-  <p> - - Links above, Science below - - </p>
+  <p></p>
 permalink: /:title
 
 # Comments are powered by disqus
