--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: ""
 description: ""
 logo: 'assets/images/fracticalcanopy.png'
 favicon: 'assets/images/fracticalcanopy.png'
-baseurl: /bolyche.github.io
+baseurl: 
 google_analytics: 'UA-54061327-2'
 disqus: 'bolyche'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
